<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_play"
    android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
    tools:context=".PassagePlayQuestion">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/text_view_passage_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="Score: 5"
        android:background="@color/velvetBlue"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_passage_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Level: 1"
        android:background="@color/velvetBlue"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_passage_score" />


    <TextView
        android:id="@+id/text_view_passage_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="00:30"
        android:background="@color/velvetBlue"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_vew_passage_question1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:gravity="left"
        android:text="@string/question1P"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_passage_play"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_passage_play1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hinder"
            android:textSize="15sp"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@drawable/text_color"
            />

        <RadioButton
            android:id="@+id/radio_button_passage_play2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="Calm"
            android:textSize="15sp"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radio_button_passage_play3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rough"
            android:textSize="15sp"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@drawable/text_color"
            />

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPassagePlayConfirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_passage_play">

        <Button
            android:id="@+id/buttonPlayWord"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/cardViewPassagePlayConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBackPassagePlay"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPassagePlayConfirm">

        <Button
            android:id="@+id/buttonBackPlay"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>